apply plugin: 'com.android.application'

apply plugin: 'kotlin-android'

apply plugin: 'kotlin-android-extensions'

def props = new Properties()
props.put("storeFile", "\"${System.env.STOREFILE}\"")
props.put("keyAlias", "\"${System.env.KEYALIAS}\"")
props.put("keyPassword", "\"${System.env.KEYPASSWORD}\"")
props.put("storePassword", "\"${System.env.STOREPASSWORD}\"")

android {
    signingConfigs {
        release {
            keyAlias props['keyAlias']
            keyPassword props['keyPassword']
            storeFile file(props['storeFile'])
            storePassword props['storePassword']
        }
        debug {
            keyAlias props['keyAlias']
            keyPassword props['keyPassword']
            storeFile file(props['storeFile'])
            storePassword props['storePassword']
        }
    }
    compileSdkVersion 27
    defaultConfig {
        applicationId "com.smartco.app"
        minSdkVersion 16
        targetSdkVersion 27
        versionCode 1812022107
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
        }
        debug {
            signingConfig signingConfigs.debug
        }
    }
    buildToolsVersion '29.0.0'
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    flavorDimensions "version"
    productFlavors {
        idemo {
            dimension "version"
            targetSdkVersion 27
            testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
            versionCode 1812022107
            versionName '1.0'
        }
        irelease {
            dimension "version"
            targetSdkVersion 27
            testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
            versionCode 1812022107
            versionName '1.0'
        }
    }
    testOptions {
        unitTests {
            all {
                // Sets JVM argument(s) for the test JVM(s).
                jvmArgs '-XX:MaxPermSize=512m'
            }
        }
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
    implementation 'com.android.support:appcompat-v7:27.1.1'
    implementation 'com.google.android.gms:play-services-vision:18.0.0'
    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
    implementation 'com.android.support:design:27.1.1'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
    // MS App Center
    def appCenterSdkVersion = '1.10.0'
    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
    // tests
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.0'
}
